Added few more FAQ questions
Change-Id: I8b3a9f20f16af058daeb6f0a6de17335a11fc854

--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -37,6 +37,24 @@
 
 	<hr>
 
+	<a name="information_produced"></a>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_information_produced') %></span></h2>
+	<div class="answer"><%= t('faq.a_information_produced') %></div>
+
+	<hr>
+
+	<a name="informal_non_government_requests"></a>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_informal_non_government_requests') %></span></h2>
+	<div class="answer"><%= t('faq.a_informal_non_government_requests') %></div>
+
+	<hr>
+
+	<a name="informal_government_requests"></a>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_informal_government_requests') %></span></h2>
+	<div class="answer"><%= t('faq.a_informal_government_requests') %></div>
+
+	<hr>
+
 	<a name="civil_subpoena"></a>
 	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_civil_subpoena') %></span></h2>
 	<div class="answer"><%= t('faq.a_civil_subpoena') %></div>
