--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -52,19 +52,19 @@
 				<td>56</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('privacy.informal_non_govt') %></td>
+				<td class="indent"><a href="/faq.html#informal_non_government_requests"><%= t('privacy.informal_non_govt') %></td>
 				<td>28</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('privacy.informal_govt') %></td>
+				<td class="indent"><a href="/faq.html#informal_government_requests"><%= t('privacy.informal_govt') %></a></td>
 				<td>15</td>
 			</tr>
 			<tr>
-				<td class="indent"><a href="/faq#civil_subpoena"><%= t('privacy.civil_subpoenas') %></a></td>
+				<td class="indent"><a href="/faq.html#civil_subpoena"><%= t('privacy.civil_subpoenas') %></a></td>
 				<td>8</td>
 			</tr>
 			<tr>
-				<td class="indent"><a href="/faq#criminal_subpoena"><%= t('privacy.criminal_subpoenas') %></a></td>
+				<td class="indent"><a href="/faq.html#criminal_subpoena"><%= t('privacy.criminal_subpoenas') %></a></td>
 				<td>5</td>
 			</tr>
 			<tr>
@@ -72,11 +72,11 @@
 				<td>0</td>
 			</tr>
 			<tr>
-				<td class="indent"><%= t('privacy.search_warrants') %></td>
+				<td class="indent"><a href="/faq.html#search_warrant"><%= t('privacy.search_warrants') %></a></td>
 				<td>0</td>
 			</tr>
 			<tr class="last">
-				<td class="indent"><%= t('privacy.court_orders') %></td>
+				<td class="indent"><a href="/faq.html#court_order"><%= t('privacy.court_orders') %></a></td>
 				<td>0</td>
 			</tr>
 			<tr>
