--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -80,7 +80,7 @@
 	padding-bottom: 30px;
 }
 
-#targeted_takedown_graph {
+#targeted_takedown_graph, #targeted_dmca_graph {
 	margin-left: -20px;
 	width: 750px;
 	height: 100px;
