--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -60,6 +60,7 @@
 
 				<div class="col-md-2">
 					<ul>
+						<li><a href="/data/data_aug2014.ods"><%= t('menu.download_data') %></a></li>
 						<li><a href="http://wikimediafoundation.org/wiki/Privacy_policy"><%= t('menu.privacy_policy') %></a></li>
 						<li><a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines"><%= t('menu.data_retention_guidelines') %></a></li>
 						<li><a href="http://wikimediafoundation.org/wiki/Terms_of_Use"><%= t('menu.tou') %></a></li>
