--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -133,7 +133,7 @@
 
 .bubble_graph {
 	line.bottomline {
-		stroke: black;
+		stroke: $lightgray;
 		stroke-width: 1;
 	}
 
@@ -142,6 +142,7 @@
 		font-size: 16px;
 		font-weight: 400;
 		text-anchor: middle;
+		color: $black;
 
 		&.in_circle {
 			transition: all 1s ease;
