--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -42,9 +42,9 @@
 		</p>
 	</a>
 </div>
-
-<div class="col-md-12">
-<blockquote>
+<div class="col-md-2"></div>
+<div class="col-md-10">
+<blockquote class="middle">
     <p><%= t('home.quote') %></p>
     <footer>
       <img src="/images/quote_brandeis.png">
