Align "Information Produced?" with the tabs on the DMCA Requests graph
Change-Id: I6c40a9890e4480ff008d14bffc6e417567b9f96b

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -173,7 +173,7 @@
 			<li><a class="dmca_requests_tabs" id="dmca_requests_janjun14" href="javascript: void(0);"><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</a></li>
 		</ul>
 
-		<div class="col-md-4">
+		<div class="col-md-4" id="dmca_requests_legend">
 			<h3>Information Produced?</h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
