Added links and fixed typos
Change-Id: I566eb1f510144ea0e24f9d4d8c5ec03e92849a4e

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -52,9 +52,9 @@
 
 				<div class="col-md-2">
 					<ul>
-						<li><a href="#"><%= t('menu.privacy') %></a></li>
-						<li><a href="#"><%= t('menu.content') %></a></li>
-						<li><a href="#"><%= t('menu.faq') %></a></li>
+						<li><a href="/privacy.html"><%= t('menu.privacy') %></a></li>
+						<li><a href="/content.html"><%= t('menu.content') %></a></li>
+						<li><a href="/faq.html"><%= t('menu.faq') %></a></li>
 					</ul>
 				</div>
 
@@ -69,8 +69,8 @@
 
 				<div class="col-md-2">
 					<ul>
-						<li><a href="#"><%= t('menu.about_us') %></a></li>
-						<li><a href="#"><%= t('menu.blog') %></a></li>
+						<li><a href="http://wikimediafoundation.org"><%= t('menu.about_us') %></a></li>
+						<li><a href="https://blog.wikimedia.org/"><%= t('menu.blog') %></a></li>
 					</ul>
 				</div>
 
