--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -47,7 +47,7 @@
 <blockquote class="middle">
     <p><%= t('home.quote') %></p>
     <footer>
-      <img src="/images/quote_brandeis.png">
+      <a href="https://en.wikipedia.org/wiki/Louis_Brandeis#mediaviewer/File:Brandeisl.jpg"><img src="/images/quote_brandeis.png"></a>
       <p><%= t('home.cite') %></p>
     </footer>
   </blockquote>
