--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -36,7 +36,7 @@
   <blockquote>
     <p><%= t('content.quote') %></p>
     <footer>
-      <img src="/images/quote_jay.png">
+      <a href="http://commons.wikimedia.org/wiki/File:Jay-Z_2011.jpg"><img src="/images/quote_jay.png"></a>
       <p><%= t('content.cite') %></p>
     </footer>
   </blockquote>
@@ -44,7 +44,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <img src="/images/story_dcri.png">
+    <a href="https://fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute#mediaviewer/Fichier:Base_militaire_de_Pierre-sur-Haute.jpg"><img src="/images/story_dcri.png"></a>
     <h3><%= t('content.story1_title') %></h3>
     <p><%= t('content.story1_body') %></p>
   </div>
@@ -52,7 +52,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <img src="/images/story_monkey.png">
+    <a href="https://commons.wikimedia.org/wiki/Commons:Featured_picture_candidates/File:Macaca_nigra_self-portrait_%28rotated_and_cropped%29.jpg#File:Macaca_nigra_self-portrait_.28rotated_and_cropped.29.jpg"><img src="/images/story_monkey.png"></a>
     <h3><%= t('content.story2_title') %></h3>
     <p><%= t('content.story2_body') %></p>
   </div>
@@ -60,7 +60,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <img src="/images/story_aboriginal.png">
+    <a href="https://en.wikipedia.org/wiki/Mount_Wellington_%28Tasmania%29#mediaviewer/File:Mount_Wellington.jpg"><img src="/images/story_aboriginal.png"></a>
     <h3><%= t('content.story3_title') %></h3>
     <p><%= t('content.story3_body') %></p>
   </div>
@@ -124,7 +124,7 @@
   <blockquote>
     <p><%= t('content.quote2') %></p>
     <footer>
-      <img src="/images/quote_samuelson.png">
+      <a href="https://en.wikipedia.org/wiki/Pamela_Samuelson#mediaviewer/File:Pamela_Samuelson,_2005.jpg"><img src="/images/quote_samuelson.png"></a>
       <p><%= t('content.cite2') %></p>
     </footer>
   </blockquote>
@@ -132,7 +132,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <img src="/images/story_ruth.png">
+    <a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg"><img src="/images/story_ruth.png"></a>
     <h3>
       <%= t('content.s_t_babe_ruth') %>
     </h3>
@@ -152,7 +152,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <img src="/images/story_classics.png">
+    <a href="https://commons.wikimedia.org/wiki/Jane_Austen#mediaviewer/File:Jane_Austen_coloured_version.jpg"><img src="/images/story_classics.png"></a>
     <h3>
       <%= t('content.s_t_classic') %>
     </h3>
