Links and other minor text changes
Change-Id: Ia789e412158ddfaae895104529c6fe3d951631ea

--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -87,7 +87,7 @@
 
 	<a name="actually_affected"></a>
 	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_actually_affected') %></span></h2>
-	<div class="answer"><%= t('faq.a_acutally_affected') %></div>
+	<div class="answer"><%= t('faq.a_actually_affected') %></div>
 
 	<hr>
 
