--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -8,7 +8,7 @@
 
 <div class="col-md-3">
 	<section class="scorecard">
-		<h2><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</h2>
+		<h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
 		<dl>
 			<dt><%= t('privacy.total_number_of_requests') %></dt>
 			<dd>56</dd>
@@ -16,7 +16,7 @@
 	</section>
 	<br><br>
 	<section class="scorecard">
-		<h2><%= t('dates.jan') %> — <%= t('dates.jun') %> 2014</h2>
+		<h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
 		<dl>
 			<dt><%= t('privacy.percentage_of_times_information_produced') %></dt>
 			<dd>14<small>%</small></dd>
