--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -8,7 +8,7 @@
 
 <div class="col-md-3">
   <section class="scorecard">
-    <h2><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</h2>
+    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
       <dt><%= t('content.total_number_of_requests') %></dt>
       <dd>304</dd>
@@ -18,7 +18,7 @@
   <br><br>
 
   <section class="scorecard">
-    <h2><%= t('dates.jan') %> - <%= t('dates.jun') %> 2014</h2>
+    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
       <dt><%= t('content.percentage_of_requests_granted') %></dt>
       <dd>0<small>%</small></dd>
@@ -102,7 +102,7 @@
 
 <div class="col-md-3">
   <section class="scorecard">
-    <h2>January – June 2014</h2>
+    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
       <dt>Total Number of DMCA Takedown Requests</dt>
       <dd>58</dd>
@@ -110,7 +110,7 @@
   </section>
   <br><br>
   <section class="scorecard">
-    <h2>January – June 2014</h2>
+    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
       <dt>Percentage of Requests Granted</dt>
       <dd>41<small>%</small></dd>
