--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -165,7 +165,7 @@
 <div class="col-md-12">
 
 	<div class="analytics">
-		<h2>DMCA requests received, and how we responsed</h2>
+		<h2>DMCA requests received, and how we responded</h2>
 		<ul class="tabs">
 			<li><a class="dmca_requests_tabs" id="dmca_requests_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
 			<li><a class="active dmca_requests_tabs" id="dmca_requests_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
@@ -174,7 +174,7 @@
 		</ul>
 
 		<div class="col-md-4" id="dmca_requests_legend">
-			<h3>Information Produced?</h3>
+			<h3>Request Granted?</h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
