Content Page: Add strings for scorecards
Change-Id: I7d2bc83280dd58215a32264da44cf504406a9162

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -104,7 +104,7 @@
   <section class="scorecard">
     <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
-      <dt>Total Number of DMCA Takedown Requests</dt>
+      <dt><%= t('content.total_number_of_dmca_requests') %></dt>
       <dd>58</dd>
     </dl>
   </section>
@@ -112,7 +112,7 @@
   <section class="scorecard">
     <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
-      <dt>Percentage of Requests Granted</dt>
+      <dt><%= t('content.percentage_of_requests_granted') %></dt>
       <dd>41<small>%</small></dd>
     </dl>
   </section>
