Use margins instead of <br>s for the scorecards
Change-Id: Ifa09112d9ae7cda9b1218774e91aa457384bdc17

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -15,9 +15,7 @@
     </dl>
   </section>
 
-  <br><br>
-
-  <section class="scorecard">
+  <section class="scorecard scorecard_bottom">
     <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
       <dt><%= t('content.percentage_of_requests_granted') %></dt>
@@ -108,8 +106,8 @@
       <dd>58</dd>
     </dl>
   </section>
-  <br><br>
-  <section class="scorecard">
+
+  <section class="scorecard scorecard_bottom">
     <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
       <dt><%= t('content.percentage_of_requests_granted') %></dt>
