--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -14,8 +14,8 @@
 			<dd>56</dd>
 		</dl>
 	</section>
-	<br><br>
-	<section class="scorecard">
+
+	<section class="scorecard scorecard_bottom">
 		<h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
 		<dl>
 			<dt><%= t('privacy.percentage_of_times_information_produced') %></dt>
@@ -116,7 +116,6 @@
 
 </div>
 <div class="clear"></div>
-<br/> <br/>
 
 <div class="col-md-12">
 	<div class="analytics">
