--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -69,7 +69,7 @@
 
 <div class="col-md-12">
 	<div class="analytics">
-		<h2>Where did these requests come from?</h2>
+		<h2><%= t('content.graph_where_from') %></h2>
 		<ul class="tabs">
 			<li><a class="where_from_tabs" id="where_from_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
 			<li><a class="active where_from_tabs" id="where_from_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
@@ -83,7 +83,7 @@
 
 
 	<div class="analytics">
-		<h2>Which Wikimedia projects were targeted?</h2>
+		<h2><%= t('content.graph_targeted_takedown') %></h2>
 		<ul class="tabs">
 			<li><a class="targeted_takedown_tabs" id="targeted_takedown_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
 			<li><a class="active targeted_takedown_tabs" id="targeted_takedown_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
@@ -163,7 +163,7 @@
 <div class="col-md-12">
 
 	<div class="analytics">
-		<h2>DMCA requests received, and how we responded</h2>
+		<h2><%= t('content.graph_dmca_requests') %></h2>
 		<ul class="tabs">
 			<li><a class="dmca_requests_tabs" id="dmca_requests_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
 			<li><a class="active dmca_requests_tabs" id="dmca_requests_jul12jun13" href="javascript: void(0);"><%= t('dates.jul') %> 2012 - <%= t('dates.jun') %> 2013</a></li>
@@ -172,7 +172,7 @@
 		</ul>
 
 		<div class="col-md-4" id="dmca_requests_legend">
-			<h3>Request Granted?</h3>
+			<h3><%= t('content.request_granted') %></h3>
 			<div>
 				<p class="legend legend_yes"><%= t('yn.yess') %></p>
 				<p class="legend legend_no"><%= t('yn.noo') %></p>
@@ -187,7 +187,7 @@
 	</div>
 
 	<div class="analytics">
-		<h2>Which Wikimedia projects were targeted?</h2>
+		<h2><%= t('content.graph_targeted_dmca') %></h2>
 		<ul class="tabs">
 			<li><a class="targeted_dmca_tabs" id="targeted_dmca_all" href="javascript: void(0);"><%= t('dates.all') %></a></li>
 			<li><a class="active targeted_dmca_tabs" id="targeted_dmca_juldec13" href="javascript: void(0);"><%= t('dates.jul') %> - <%= t('dates.dec') %> 2013</a></li>
