--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -400,6 +400,21 @@ blockquote {
 			background: #33415A;
 		}
 	}
+
+	.fineprint {
+		width: 400px;
+
+		h2 {
+			margin: 0;
+			display: block;
+			float: left;
+			margin-top: -7px;
+		}
+
+		p {
+			margin-left: 20px;
+		}
+	}
 }
 
 .faq {
