Add tooltips for countries with an extra comment
Change-Id: I913971767c3ea5f427dd712812fb4df5329eb91d

--- a/source/stylesheets/graph.css.scss
+++ b/source/stylesheets/graph.css.scss
@@ -137,6 +137,15 @@
 		cursor: pointer;
 		fill: $blue;
 	}
+
+	text a {
+		fill: $blue;
+		cursor: pointer;
+
+		&:hover {
+			text-decoration: none;
+		}
+	}
 }
 
 .bubble_graph {
