--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -91,6 +91,12 @@
 
 	<hr>
 
+	<a name="different_compare"></a>
+	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_different_compare') %></span></h2>
+	<div class="answer"><%= t('faq.a_different_compare') %></div>
+
+	<hr>
+
 	<a name="public_information_included"></a>
 	<h2 class="question"><img src="/images/chevron.svg"><span><%= t('faq.q_public_information_included') %></span></h2>
 	<div class="answer"><%= t('faq.a_public_information_included') %></div>
