--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -405,10 +405,10 @@ blockquote {
 		width: 400px;
 
 		h2 {
-			margin: 0;
 			display: block;
 			float: left;
-			margin-top: -7px;
+			margin: -3px 4px 0px;
+			font-size: 24px;
 		}
 
 		p {
