Fix quotes for mobile, part 2
Change-Id: I1f0412353c778697c43a43e66b7ec729b50b7ea7

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -503,6 +503,15 @@ blockquote {
     width: 100%;
 	}
 
+	blockquote footer img {
+    margin-left: 40px;
+  }
+
+	blockquote footer p {
+    margin-left: 124px;
+    padding-right: 40px;
+  }
+
 	.navbar-brand {
 		padding: 15px 10px;
 	}
