Added more spacing around elements on mobile
Change-Id: I0440a0f0787da8acf90e095d4a5957ac16c13c05

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -504,6 +504,8 @@ blockquote {
   }
 
 
+
+
   #summary_table {
     width: 100%;
 	}
@@ -587,7 +589,13 @@ blockquote {
 	}
 
 	.scorecard_bottom {
+		margin-top: 40px;
+		margin-bottom: 40px;
+	}
+
+	blockquote {
 		margin-top: 30px;
+		margin-bottom: 30px;
 	}
 
 	.legends div {
