Added links in the footer for Wiki Version of the report
Change-Id: I02bb3df0106804c63205ffca1a6405b33b0926db

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -60,10 +60,10 @@
 
 				<div class="col-md-2">
 					<ul>
+						<li><a href="https://meta.wikimedia.org/wiki/Wikimedia_Foundation_Transparency_Report"><%= t('menu.wiki_version') %></a></li>
 						<li><a href="/data/data_aug2014.ods"><%= t('menu.download_data') %></a></li>
 						<li><a href="http://wikimediafoundation.org/wiki/Privacy_policy"><%= t('menu.privacy_policy') %></a></li>
 						<li><a href="https://meta.wikimedia.org/wiki/Data_retention_guidelines"><%= t('menu.data_retention_guidelines') %></a></li>
-						<li><a href="http://wikimediafoundation.org/wiki/Terms_of_Use"><%= t('menu.tou') %></a></li>
 					</ul>
 				</div>
 
@@ -71,6 +71,7 @@
 					<ul>
 						<li><a href="http://wikimediafoundation.org"><%= t('menu.about_us') %></a></li>
 						<li><a href="https://blog.wikimedia.org/"><%= t('menu.blog') %></a></li>
+						<li><a href="http://wikimediafoundation.org/wiki/Terms_of_Use"><%= t('menu.tou') %></a></li>
 					</ul>
 				</div>
 
