Fix FAQ for mobile
Change-Id: I4bf41077fa132da1fe63f091393758053c8c1479

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -602,4 +602,14 @@ blockquote {
 		width: 100% !important;
 	}
 
+	.faq {
+		.question {
+			width: 90%;
+			font-size: 18px;
+		}
+
+		.answer {
+			width: 90%;
+		}
+	}
 }
