FAQ: Use CSS transitions intead of jQuery.animate
Change-Id: I37279b0fa12b3e5b45c9a4b2640d292aea06a36b

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -455,8 +455,16 @@ blockquote {
 	}
 
 	.answer {
+		transition: all 0.25s;
+		max-height: 0;
+		overflow: hidden;
 		width: 610px;
 		margin-left: 30px;
+		display: block;
+
+		&.open {
+			max-height: 1200px;
+		}
 	}
 
 	hr {
