Use protocol relative URLs for some links on Transparency Report pages
Some links on the Wikimedia Foundation Transparency Report have hard coded
"http:" as their protocol. I changed them to protocol relative links
(those start with "//"). The links with hard coded https are not changed
to protocol relative.

Change-Id: Id2b651cb64cf803bf87cb7d5e25ea350a944474f

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -34,7 +34,7 @@
   <blockquote>
     <p><%= t('content.quote') %></p>
     <footer>
-      <a href="http://commons.wikimedia.org/wiki/File:Jay-Z_2011.jpg"><img src="/images/quote_jay.png"></a>
+      <a href="//commons.wikimedia.org/wiki/File:Jay-Z_2011.jpg"><img src="/images/quote_jay.png"></a>
       <p><%= t('content.cite') %></p>
     </footer>
   </blockquote>
