Use protocol relative URLs for links with https
None of the occurrences of https seem to require extra
security. Thus, making those protocol relative too.

Change-Id: I136d08dd9bb0d17ffeac568558de3dd5955f6b7d

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -42,7 +42,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="https://fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute#mediaviewer/Fichier:Base_militaire_de_Pierre-sur-Haute.jpg"><img src="/images/story_dcri.png"></a>
+    <a href="//fr.wikipedia.org/wiki/Station_hertzienne_militaire_de_Pierre-sur-Haute#mediaviewer/Fichier:Base_militaire_de_Pierre-sur-Haute.jpg"><img src="/images/story_dcri.png"></a>
     <h3><%= t('content.story1_title') %></h3>
     <p><%= t('content.story1_body') %></p>
   </div>
@@ -50,7 +50,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="https://commons.wikimedia.org/wiki/Commons:Featured_picture_candidates/File:Macaca_nigra_self-portrait_%28rotated_and_cropped%29.jpg#File:Macaca_nigra_self-portrait_.28rotated_and_cropped.29.jpg"><img src="/images/story_monkey.png"></a>
+    <a href="//commons.wikimedia.org/wiki/Commons:Featured_picture_candidates/File:Macaca_nigra_self-portrait_%28rotated_and_cropped%29.jpg#File:Macaca_nigra_self-portrait_.28rotated_and_cropped.29.jpg"><img src="/images/story_monkey.png"></a>
     <h3><%= t('content.story2_title') %></h3>
     <p><%= t('content.story2_body') %></p>
   </div>
@@ -58,7 +58,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="https://en.wikipedia.org/wiki/Mount_Wellington_%28Tasmania%29#mediaviewer/File:Mount_Wellington.jpg"><img src="/images/story_aboriginal.png"></a>
+    <a href="//en.wikipedia.org/wiki/Mount_Wellington_%28Tasmania%29#mediaviewer/File:Mount_Wellington.jpg"><img src="/images/story_aboriginal.png"></a>
     <h3><%= t('content.story3_title') %></h3>
     <p><%= t('content.story3_body') %></p>
   </div>
@@ -122,7 +122,7 @@
   <blockquote>
     <p><%= t('content.quote2') %></p>
     <footer>
-      <a href="https://en.wikipedia.org/wiki/Pamela_Samuelson#mediaviewer/File:Pamela_Samuelson,_2005.jpg"><img src="/images/quote_samuelson.png"></a>
+      <a href="//en.wikipedia.org/wiki/Pamela_Samuelson#mediaviewer/File:Pamela_Samuelson,_2005.jpg"><img src="/images/quote_samuelson.png"></a>
       <p><%= t('content.cite2') %></p>
     </footer>
   </blockquote>
@@ -130,7 +130,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="https://en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg"><img src="/images/story_ruth.png"></a>
+    <a href="//en.wikipedia.org/wiki/Babe_Ruth%27s_called_shot#mediaviewer/File:Ruth1932-1.jpg"><img src="/images/story_ruth.png"></a>
     <h3>
       <%= t('content.s_t_babe_ruth') %>
     </h3>
@@ -150,7 +150,7 @@
 
 <div class="col-md-4">
   <div class="story">
-    <a href="https://commons.wikimedia.org/wiki/Jane_Austen#mediaviewer/File:Jane_Austen_coloured_version.jpg"><img src="/images/story_classics.png"></a>
+    <a href="//commons.wikimedia.org/wiki/Jane_Austen#mediaviewer/File:Jane_Austen_coloured_version.jpg"><img src="/images/story_classics.png"></a>
     <h3>
       <%= t('content.s_t_classic') %>
     </h3>
