--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -35,7 +35,7 @@
 	<blockquote>
 		<p><%= t('privacy.quote') %></p>
 		<footer>
-			<a href="https://en.wikipedia.org/wiki/Oscar_Wilde#mediaviewer/File:Oscar_Wilde_Sarony.jpg"><img src="/images/quote_wilde.png"></a>
+			<a href="//en.wikipedia.org/wiki/Oscar_Wilde#mediaviewer/File:Oscar_Wilde_Sarony.jpg"><img src="/images/quote_wilde.png"></a>
 			<p><%= t('privacy.cite') %></p>
 		</footer>
 	</blockquote>
@@ -68,7 +68,7 @@
 				<td>5</td>
 			</tr>
 			<tr>
-				<td class="indent"><a href="https://en.wikipedia.org/wiki/Administrative_subpoena"><%= t('privacy.administrative_subpoenas') %></a></td>
+				<td class="indent"><a href="//en.wikipedia.org/wiki/Administrative_subpoena"><%= t('privacy.administrative_subpoenas') %></a></td>
 				<td>0</td>
 			</tr>
 			<tr>
