--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -42,6 +42,7 @@
 		</p>
 	</a>
 </div>
+<div class="clear"></div>
 <div class="col-md-2"></div>
 <div class="col-md-10">
 <blockquote class="middle">
