Translations for string in JS
Change-Id: I60ac57b2279abba2e1a5f8d893efe512d4d36b2b

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -199,6 +199,82 @@
 	</div>
 </div>
 
+
 <div class="clear"></div>
+
+<!-- Translations for JS -->
+<input type="hidden" id="t_total_requests" value="<%= t('privacy.total_requests') %>">
+<input type="hidden" id="t_request_granted" value="<%= t('graph.request_granted') %>">
+<input type="hidden" id="t_information_produced" value="<%= t('privacy.information_produced') %>">
+<input type="hidden" id="t_usa" value="<%= t('graph.usa') %>">
+<input type="hidden" id="t_united_kingdom" value="<%= t('graph.united_kingdom') %>">
+<input type="hidden" id="t_france" value="<%= t('graph.france') %>">
+<input type="hidden" id="t_germany" value="<%= t('graph.germany') %>">
+<input type="hidden" id="t_india" value="<%= t('graph.india') %>">
+<input type="hidden" id="t_singapore" value="<%= t('graph.singapore') %>">
+<input type="hidden" id="t_new_zealand" value="<%= t('graph.new_zealand') %>">
+<input type="hidden" id="t_malaysia" value="<%= t('graph.malaysia') %>">
+<input type="hidden" id="t_italy" value="<%= t('graph.italy') %>">
+<input type="hidden" id="t_canada" value="<%= t('graph.canada') %>">
+<input type="hidden" id="t_hong_kong" value="<%= t('graph.hong_kong') %>">
+<input type="hidden" id="t_mexico" value="<%= t('graph.mexico') %>">
+<input type="hidden" id="t_netherlands" value="<%= t('graph.netherlands') %>">
+<input type="hidden" id="t_slovakia" value="<%= t('graph.slovakia') %>">
+<input type="hidden" id="t_brazil" value="<%= t('graph.brazil') %>">
+<input type="hidden" id="t_spain" value="<%= t('graph.spain') %>">
+<input type="hidden" id="t_switzerland" value="<%= t('graph.switzerland') %>">
+<input type="hidden" id="t_australia" value="<%= t('graph.australia') %>">
+<input type="hidden" id="t_russia" value="<%= t('graph.russia') %>">
+<input type="hidden" id="t_belgium" value="<%= t('graph.belgium') %>">
+<input type="hidden" id="t_austria" value="<%= t('graph.austria') %>">
+<input type="hidden" id="t_chile" value="<%= t('graph.chile') %>">
+<input type="hidden" id="t_iran" value="<%= t('graph.iran') %>">
+<input type="hidden" id="t_israel" value="<%= t('graph.israel') %>">
+<input type="hidden" id="t_luxembourg" value="<%= t('graph.luxembourg') %>">
+<input type="hidden" id="t_poland" value="<%= t('graph.poland') %>">
+<input type="hidden" id="t_serbia" value="<%= t('graph.serbia') %>">
+<input type="hidden" id="t_ireland" value="<%= t('graph.ireland') %>">
+<input type="hidden" id="t_unknown" value="<%= t('graph.unknown') %>">
+<input type="hidden" id="t_pakistan" value="<%= t('graph.pakistan') %>">
+<input type="hidden" id="t_senegal" value="<%= t('graph.senegal') %>">
+<input type="hidden" id="t_latvia" value="<%= t('graph.latvia') %>">
+<input type="hidden" id="t_argentina" value="<%= t('graph.argentina') %>">
+<input type="hidden" id="t_bulgaria" value="<%= t('graph.bulgaria') %>">
+<input type="hidden" id="t_denmark" value="<%= t('graph.denmark') %>">
+<input type="hidden" id="t_south_korea" value="<%= t('graph.south_korea') %>">
+<input type="hidden" id="t_norway" value="<%= t('graph.norway') %>">
+<input type="hidden" id="t_slovenia" value="<%= t('graph.slovenia') %>">
+<input type="hidden" id="t_peru" value="<%= t('graph.peru') %>">
+<input type="hidden" id="t_bangladesh" value="<%= t('graph.bangladesh') %>">
+
+<input type="hidden" id="t_english_wikipedia" value="<%= t('graph.english_wikipedia') %>">
+<input type="hidden" id="t_wikimedia_commons" value="<%= t('graph.wikimedia_commons') %>">
+<input type="hidden" id="t_german_wikipedia" value="<%= t('graph.german_wikipedia') %>">
+<input type="hidden" id="t_french_wikipedia" value="<%= t('graph.french_wikipedia') %>">
+<input type="hidden" id="t_spanish_wikipedia" value="<%= t('graph.spanish_wikipedia') %>">
+<input type="hidden" id="t_italian_wikipedia" value="<%= t('graph.italian_wikipedia') %>">
+<input type="hidden" id="t_portuguese_wikipedia" value="<%= t('graph.portuguese_wikipedia') %>">
+<input type="hidden" id="t_bulgarian_wikipedia" value="<%= t('graph.bulgarian_wikipedia') %>">
+<input type="hidden" id="t_arabic_wikipedia" value="<%= t('graph.arabic_wikipedia') %>">
+<input type="hidden" id="t_japanese_wikipedia" value="<%= t('graph.japanese_wikipedia') %>">
+<input type="hidden" id="t_dutch_wikipedia" value="<%= t('graph.dutch_wikipedia') %>">
+<input type="hidden" id="t_norwegian_wikipedia" value="<%= t('graph.norwegian_wikipedia') %>">
+<input type="hidden" id="t_polish_wikipedia" value="<%= t('graph.polish_wikipedia') %>">
+<input type="hidden" id="t_chinese_wikipedia" value="<%= t('graph.chinese_wikipedia') %>">
+<input type="hidden" id="t_english_wikisource" value="<%= t('graph.english_wikisource') %>">
+<input type="hidden" id="t_french_wikisource" value="<%= t('graph.french_wikisource') %>">
+<input type="hidden" id="t_ukrainian_wikipedia" value="<%= t('graph.ukrainian_wikipedia') %>">
+<input type="hidden" id="t_french_wikivoyage" value="<%= t('graph.french_wikivoyage') %>">
+<input type="hidden" id="t_french_wikitionary" value="<%= t('graph.french_wikitionary') %>">
+<input type="hidden" id="t_no_project_named" value="<%= t('graph.no_project_named') %>">
+<input type="hidden" id="t_russian_wikipedia" value="<%= t('graph.russian_wikipedia') %>">
+<input type="hidden" id="t_slovenian_wikipedia" value="<%= t('graph.slovenian_wikipedia') %>">
+
+<input type="hidden" id="t_one_case_was_american_brazilian" value="<%= t('graph.one_case_was_american_brazilian') %>">
+<input type="hidden" id="t_one_case_was_british_swiss" value="<%= t('graph.one_case_was_british_swiss') %>">
+<input type="hidden" id="t_one_case_was_french_saudi_arabian" value="<%= t('graph.one_case_was_french_saudi_arabian') %>">
+<input type="hidden" id="t_one_case_was_russian_british" value="<%= t('graph.one_case_was_russian_british') %>">
+<input type="hidden" id="t_one_case_was_spanish_italian" value="<%= t('graph.one_case_was_spanish_italian') %>">
+<input type="hidden" id="t_one_case_was_serbo_croat" value="<%= t('graph.one_case_was_serbo_croat') %>">
 
 <script src="/javascripts/content.js"></script>
