--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -148,5 +148,31 @@
 
 </div>
 
+<!-- Translations for JS -->
+<input type="hidden" id="t_total_requests" value="<%= t('privacy.total_requests') %>">
+<input type="hidden" id="t_information_produced" value="<%= t('privacy.information_produced') %>">
+<input type="hidden" id="t_usa" value="<%= t('graph.usa') %>">
+<input type="hidden" id="t_united_kingdom" value="<%= t('graph.united_kingdom') %>">
+<input type="hidden" id="t_france" value="<%= t('graph.france') %>">
+<input type="hidden" id="t_germany" value="<%= t('graph.germany') %>">
+<input type="hidden" id="t_india" value="<%= t('graph.india') %>">
+<input type="hidden" id="t_singapore" value="<%= t('graph.singapore') %>">
+<input type="hidden" id="t_new_zealand" value="<%= t('graph.new_zealand') %>">
+<input type="hidden" id="t_malaysia" value="<%= t('graph.malaysia') %>">
+<input type="hidden" id="t_italy" value="<%= t('graph.italy') %>">
+<input type="hidden" id="t_canada" value="<%= t('graph.canada') %>">
+<input type="hidden" id="t_hong_kong" value="<%= t('graph.hong_kong') %>">
+<input type="hidden" id="t_mexico" value="<%= t('graph.mexico') %>">
+<input type="hidden" id="t_netherlands" value="<%= t('graph.netherlands') %>">
+<input type="hidden" id="t_slovakia" value="<%= t('graph.slovakia') %>">
+<input type="hidden" id="t_brazil" value="<%= t('graph.brazil') %>">
+<input type="hidden" id="t_spain" value="<%= t('graph.spain') %>">
+<input type="hidden" id="t_switzerland" value="<%= t('graph.switzerland') %>">
+
+<input type="hidden" id="t_criminal_subpoenas" value="<%= t('graph.criminal_subpoenas') %>">
+<input type="hidden" id="t_informal_non_government_requests" value="<%= t('graph.informal_non_government_requests') %>">
+<input type="hidden" id="t_civil_subpoenas" value="<%= t('graph.civil_subpoenas') %>">
+<input type="hidden" id="t_informal_government_requests" value="<%= t('graph..informal_government_requests') %>">
+
 <div class="clear">&nbsp;</div>
 <script src="/javascripts/privacy.js"></script>
