content: Add "Right To Be Forgotten Section"
Change-Id: Iee3e7e9d61db9d708ab6fda1b0a30e8de6dbbc81

--- a/source/localizable/content.html.erb
+++ b/source/localizable/content.html.erb
@@ -102,6 +102,38 @@
   <section class="scorecard">
     <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
     <dl>
+      <dt><%= t('content.total_number_of_forgotten_requests') %></dt>
+      <dd>2</dd>
+    </dl>
+  </section>
+  <section class="scorecard">
+    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
+    <dl>
+      <dt><%= t('content.number_of_forgotten_requests_granted') %></dt>
+      <dd>0</dd>
+    </dl>
+  </section>
+</div>
+
+<div class="col-md-8">
+  <h2><%= t('content.forgotten_title') %></h2>
+  <%= t('content.forgotten_intro') %>
+  <blockquote>
+    <p><%= t('content.forgotten_quote') %></p>
+    <footer>
+      <a href="//en.wikipedia.org/wiki/Pamela_Samuelson#mediaviewer/File:Pamela_Samuelson,_2005.jpg"><img src="/images/quote_samuelson.png"></a>
+      <p><%= t('content.forgotten_cite') %></p>
+    </footer>
+  </blockquote>
+</div>
+
+<div class="clear"></div>
+<br /> <br /> <br /> <br />
+
+<div class="col-md-3">
+  <section class="scorecard">
+    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
+    <dl>
       <dt><%= t('content.total_number_of_dmca_requests') %></dt>
       <dd>58</dd>
     </dl>
