privacy: Add "Voluntary Disclosures" section
Change-Id: I113b8de8780778e92099e1f72a1681fab2dca535

--- a/source/localizable/privacy.html.erb
+++ b/source/localizable/privacy.html.erb
@@ -148,6 +148,25 @@
 
 </div>
 
+<div class="clear"></div>
+<br /> <br /> <br /> <br />
+
+<div class="col-md-3">
+  <section class="scorecard">
+    <h2><%= t('dates.jul') %> 2012 – <%= t('dates.jun') %> 2014</h2>
+    <dl>
+      <dt><%= t('privacy.total_number_of_voluntary_disclosures') %></dt>
+      <dd>18</dd>
+    </dl>
+  </section>
+</div>
+
+<div class="col-md-8">
+  <h2><%= t('privacy.voluntary_disclosures_title') %></h2>
+  <%= t('privacy.voluntary_disclosures_intro') %>
+</div>
+
+
 <!-- Translations for JS -->
 <input type="hidden" id="t_total_requests" value="<%= t('privacy.total_requests') %>">
 <input type="hidden" id="t_information_produced" value="<%= t('privacy.information_produced') %>">
